--- a/.github/workflows/sphinx-gh-pages.yml
+++ b/.github/workflows/sphinx-gh-pages.yml
@@ -24,9 +24,13 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - uses: actions/configure-pages@v5
-    - uses: ammaraskar/sphinx-action@master
-      with:
-        docs-folder: "docs"
+    - uses: sphinx-doc/github-problem-matcher@master
+    
+    - name: "Build docs"
+      run: |
+        cd docs
+        make html SPHINXBUILD=sphinx-build
+        
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
   
