--- a/.github/workflows/sphinx-gh-pages.yml
+++ b/.github/workflows/sphinx-gh-pages.yml
@@ -26,14 +26,30 @@ jobs:
     - uses: actions/configure-pages@v5
     - uses: sphinx-doc/github-problem-matcher@master
     
+    - name: Install uv
+      uses: astral-sh/setup-uv@v5
+
+    - name: "Set up Python"
+      uses: actions/setup-python@v5
+      with:
+        python-version-file: "pyproject.toml"
+  
+    - name: Install the project
+      run: |
+        uv sync --group docs
+        uv pip install .
+        
+   
     - name: "Build docs"
       run: |
         cd docs
-        make html SPHINXBUILD=sphinx-build
+        make html SPHINXBUILD='uv run sphinx-build'
         
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
-  
+      with:
+        path: docs/build/html
+
   # Deployment job
   deploy:
     environment:
