--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -35,4 +35,4 @@ jobs:
         uv run ruff format . --check --diff
     - name: Test with pytest
       run: |
-        pytest
+        uv run pytest
