--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -36,3 +36,7 @@ jobs:
     - name: Test with pytest
       run: |
         uv run pytest
+
+    - name: Test with pytest --cov html
+      run: |
+        uv run pytest 
