--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,5 @@
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
     "editor.formatOnSave": true,
-    "autoDocstring.docstringFormat": "numpy-notypes"
+    "autoDocstring.docstringFormat": "google-notypes"
 }
