--- a/.github/workflows/sphinx-gh-pages.yml
+++ b/.github/workflows/sphinx-gh-pages.yml
@@ -36,7 +36,7 @@ jobs:
   
     - name: Install the project
       run: |
-        uv sync --group docs
+        uv sync --group docs --dev
         uv pip install .
         
    
